# petitesakura

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
backend/: .env.sample  Dockerfile
backend/app/: __init__,py  main,py
backend/app/api_clients/: google_api.py
backend/tests/: test_google_api.py
backend/tests/integration/: test_google_api.py
backend/tests/unit/: test_google_api_mock.py
docker/: compose.yml
