[project]
name = "python-project-template"
version = "0.1.0"
description = "Mohit Shrestha's python-project-template" # Add your description here
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-auth>=2.40.3",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "uvicorn>=0.35.0",
]
